v0.4/guides/caching/redis.mdx
---
title: "Redis"
description: "Talk to Redis directly with **@bejibun/redis** -- keys, counters, pipelines, and pub/sub."
icon: "layer-group"
---

`@bejibun/redis` wraps Bun's native Redis client with a convenient facade.
It powers the Redis cache driver and is also available directly for keys, counters, pipelines, and pub/sub.

## Installation

```bash
bun ace install @bejibun/redis
```

This installs the package and drops `config/redis.ts`. Connection details come from the environment:

```env
REDIS_HOST=127.0.0.1
REDIS_PORT=6379
REDIS_PASSWORD=
REDIS_DATABASE=0
REDIS_MAX_RETRIES=10
REDIS_CONNECTION=local
```

## Keys and values

```ts
import Redis from "@bejibun/redis";

await Redis.set("session:1", token, 3600);          // value with TTL (seconds)
const value = await Redis.get("session:1");
await Redis.del("session:1");

const exists = await Redis.exists("session:1");
const keys = await Redis.keys("session:*");
```

## Counters

```ts
await Redis.incr("page:views");
await Redis.incrBy("page:views", 10);
await Redis.decr("stock:42");
await Redis.expire("page:views", 86400);
```

## Connectivity

Check the health of a Redis connection with `ping()`:

```ts
await Redis.ping();                              // "PONG"
await Redis.ping("hello");                       // echoes back "hello"
await Redis.ping("hello", "analytics", false);   // named connection, keep it open
```

## Pipelines

Batch multiple commands in one round trip:

```ts
await Redis.pipeline((pipe) => {
    pipe.set("a", 1);
    pipe.get("b");
    pipe.del("c");
    pipe.incr("visitors");
    pipe.incrBy("visitors", 10);
    pipe.decr("stock");
    pipe.decrBy("stock", 3);
    pipe.exists("session:123");
    pipe.expire("session:123", 3600);
    pipe.keys("cache:*");
    pipe.ttl("session:123");
});
```

Supported pipeline operations: `set`, `get`, `del`, `incr`, `incrBy`, `decr`, `decrBy`, `exists`, `expire`, `keys`, and `ttl`.

## Pub/Sub

```ts
await Redis.subscribe("orders", (message) => {
    // handle incoming message
});

await Redis.publish("orders", order);
```

## Multiple connections

Target a named connection defined in `config/redis.ts`:

```ts
await Redis.connection("analytics").incr("events");
```

## API reference

| Method           | Purpose                                                                        |
| ---------------- | ------------------------------------------------------------------------------ |
| `setClient`      | Register a Redis client configuration, optionally with a connection name.      |
| `connection`     | Retrieve the registered Redis client instance by connection name.              |
| `connect`        | Establish a Redis connection.                                                  |
| `disconnect`     | Close an active Redis connection.                                              |
| `ping`           | Send a `PING` to the Redis server to check connectivity, optionally with a message. |
| `set`            | Store a value by key, with an optional TTL.                                    |
| `get`            | Retrieve the value of a key.                                                   |
| `del`            | Delete a key from Redis.                                                       |
| `exists`         | Check whether a key exists.                                                    |
| `keys`           | Return all keys matching a pattern.                                            |
| `incr`           | Increment a numeric value by 1.                                                |
| `decr`           | Decrement a numeric value by 1.                                                |
| `incrBy`         | Increment a numeric value by the specified amount.                             |
| `decrBy`         | Decrement a numeric value by the specified amount.                             |
| `ttl`            | Get the remaining time-to-live of a key.                                       |
| `expire`         | Set or update the expiration time of a key.                                    |
| `publish`        | Publish a message to a Pub/Sub channel.                                        |
| `subscribe`      | Subscribe to a Pub/Sub channel and receive messages.                           |
| `pipeline(fn)`   | Execute multiple Redis commands in a single pipeline for improved performance. |
| `on(event, fn)`  | Register an event listener for `connect`, `disconnect`, or `error` events.     |
| `off(event, fn)` | Remove a previously registered event listener.                                 |

<Tip>
    Most methods accept trailing `connection?` and `disconnectAfter?` arguments for one-off operations on a specific
    connection.
</Tip>
