v0.6/guides/caching/redis.mdx
---
title: "Redis"
description: "Talk to Redis with @bejibun/redis -- keys, counters, pipelines, and pub/sub."
icon: "server"
---

`@bejibun/redis` wraps Bun's native Redis client behind a static facade. It powers
the Redis cache driver and is also available directly for keys, counters,
pipelines, and pub/sub. Values are serialized on write (objects become JSON) and
deserialized on read, so most methods accept and return plain JavaScript values.

## Installation

```bash
bun ace install @bejibun/redis
```

This installs the package and adds `config/redis.ts`:

```ts config/redis.ts
const config: Record<string, any> = {
    default: "local",

    connections: {
        local: {
            host: env("REDIS_HOST"),
            port: env("REDIS_PORT"),
            password: env("REDIS_PASSWORD"),
            database: env("REDIS_DATABASE"),
            maxRetries: env("REDIS_MAX_RETRIES")
        }
    }
};

export default config;
```

| Field        | Purpose                          |
| ------------ | -------------------------------- |
| `default`    | Connection used when omitted     |
| `host`       | Redis server host                |
| `port`       | Redis server port                |
| `password`   | Optional authentication          |
| `database`   | Database index to select         |
| `maxRetries` | Connection retry attempts        |

## Keys and values

```ts
import Redis from "@bejibun/redis";

await Redis.set("session:1", token, 3600);          // value with TTL (seconds)
const value = await Redis.get("session:1");
await Redis.del("session:1");

const exists = await Redis.exists("session:1");
const keys = await Redis.keys("session:*");
```

## Counters

```ts
await Redis.incr("page:views");
await Redis.incrBy("page:views", 10);
await Redis.decr("stock:42");
await Redis.decrBy("stock:42", 3);
await Redis.expire("page:views", 86400);
await Redis.ttl("page:views");                       // remaining TTL in seconds
```

## Connectivity

Check the health of a connection with `ping()`:

```ts
await Redis.ping();                              // "PONG"
await Redis.ping("hello");                       // echoes back "hello"
await Redis.ping("hello", "analytics", false);   // named connection, keep it open
```

## Pipelines

Batch multiple commands in one round trip:

```ts
await Redis.pipeline((pipe) => {
    pipe.set("a", 1);
    pipe.get("b");
    pipe.del("c");
    pipe.incr("visitors");
    pipe.incrBy("visitors", 10);
    pipe.decr("stock");
    pipe.decrBy("stock", 3);
    pipe.exists("session:123");
    pipe.expire("session:123", 3600);
    pipe.keys("cache:*");
    pipe.ttl("session:123");
});
```

Supported pipeline operations: `set`, `get`, `del`, `incr`, `incrBy`, `decr`,
`decrBy`, `exists`, `expire`, `keys`, and `ttl`. Results resolve in command
order.

## Pub/Sub

Subscribe to a channel with a listener, then publish to it. `subscribe` returns
a handle whose `unsubscribe()` closes the subscription and its client:

```ts
const sub = await Redis.subscribe("orders", (message, channel) => {
    // message is deserialized from JSON where applicable
});

await Redis.publish("orders", {id: 1, total: 990});

await sub.unsubscribe();   // stop listening and close the client
```

## Multiple connections

Target a named connection defined in `config/redis.ts`:

```ts
await Redis.connection("analytics").incr("events");
```

## Lifecycle events

Listen for connection state changes:

```ts
Redis.on("connect", () => console.log("connected"));
Redis.on("error", (error) => console.error(error));
Redis.off("disconnect", handler);
```

## API reference

| Method          | Purpose                                                                             |
| --------------- | ----------------------------------------------------------------------------------- |
| `setClient`     | Register a Redis client configuration, optionally with a connection name.           |
| `connection`    | Retrieve command wrappers bound to a named connection.                              |
| `connect`       | Establish a Redis connection.                                                       |
| `disconnect`    | Close an active Redis connection.                                                   |
| `ping`          | Send a `PING` to check connectivity, optionally with a message.                     |
| `set`           | Store a value by key, with an optional TTL.                                         |
| `get`           | Retrieve the value of a key.                                                        |
| `del`           | Delete a key from Redis.                                                            |
| `exists`        | Check whether a key exists.                                                         |
| `keys`          | Return all keys matching a pattern.                                                 |
| `incr`          | Increment a numeric value by 1.                                                     |
| `decr`          | Decrement a numeric value by 1.                                                     |
| `incrBy`        | Increment a numeric value by the specified amount.                                  |
| `decrBy`        | Decrement a numeric value by the specified amount.                                  |
| `ttl`           | Get the remaining time-to-live of a key.                                            |
| `expire`        | Set or update the expiration time of a key.                                         |
| `publish`       | Publish a message to a Pub/Sub channel.                                             |
| `subscribe`     | Subscribe to a Pub/Sub channel and receive messages.                                |
| `pipeline(fn)`  | Execute multiple Redis commands in a single pipeline.                               |
| `on(event, fn)` | Register a listener for `connect`, `disconnect`, or `error` events.                 |
| `off(event, fn)`| Remove a previously registered event listener.                                      |

<Tip>
    Most methods accept trailing `connection?` and `disconnectAfter?` arguments
    for one-off operations on a specific connection. See
    [Cache](/v0.6/guides/caching/cache) for the driver that builds on this
    facade.
</Tip>